--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero">
     <div class="hero-container">
-      <a href="index.html" class="hero-logo" data-aos="zoom-in"><img src="assets/img/hero-logo.png" alt="Hard-Ne"></a>
+      <a href="index.html" class="hero-logo" data-aos="zoom-in"><img src="assets/img/hero-logo.png" alt="Bites & Bytes"></a>
       <h1 data-aos="zoom-in">Bites & Bytes</h1>
       <h2 data-aos="fade-up">Servicios informaticos.</h2>
       <a data-aos="fade-up" href="#about" class="btn-get-started scrollto">Inicio</a>
