--- a/index.html
+++ b/index.html
@@ -824,7 +824,7 @@
         <div class="row justify-content-center">
           <div class="col-lg-6">
             <a href="#header" class="scrollto footer-logo"><img src="assets/img/hero-logo.png" alt=""></a>
-            <h3>Hard-Ne</h3>
+            <h3>Bites & Bytes</h3>
             <p>Suscribite si queres recivir informacion actualizada de los nuevos productos y nuestras promociones.</p>
           </div>
         </div>
