--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Hard-Ne Techno Solutions</title>
+  <title>Bits & Bytes Techno Solutions</title>
   <meta content="Soluciones para todo lo relacionado con tu pc. Backup. Formateo de sistema operativo. Venta de insumos informáticos." name="description">
   <meta content="hard-ne, Pc, venta de insumos, disco ssd, backup, computadora, estacion de trabajo, service pc, combo pc, tecnico pc, ssd, led, ps4, playstation 4, disco ps4, disco  ps3, mantenimiento pc, cpu, procesador, memoria ram, adm, intel" name="keywords">
 
@@ -41,7 +41,7 @@
   <section id="hero">
     <div class="hero-container">
       <a href="index.html" class="hero-logo" data-aos="zoom-in"><img src="assets/img/hero-logo.png" alt="Bites & Bytes"></a>
-      <h1 data-aos="zoom-in">Bites & Bytes</h1>
+      <h1 data-aos="zoom-in">Bits & Bytes</h1>
       <h2 data-aos="fade-up">Servicios informaticos.</h2>
       <a data-aos="fade-up" href="#about" class="btn-get-started scrollto">Inicio</a>
     </div>
@@ -824,7 +824,7 @@
         <div class="row justify-content-center">
           <div class="col-lg-6">
             <a href="#header" class="scrollto footer-logo"><img src="assets/img/hero-logo.png" alt=""></a>
-            <h3>Bites & Bytes</h3>
+            <h3>Bits & Bytes</h3>
             <p>Suscribite si queres recivir informacion actualizada de los nuevos productos y nuestras promociones.</p>
           </div>
         </div>
@@ -850,7 +850,7 @@
 
     <div class="container footer-bottom clearfix">
       <div class="copyright">
-        &copy; Copyright <strong><span>Hard-Ne</span></strong>. All Rights Reserved 2021
+        &copy; Copyright <strong><span>Bit & Bytes</span></strong>. All Rights Reserved 2021
       </div>
       <div class="credits" style="color:#000;">
         <!-- All the links in the footer should remain intact. -->
