--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
           </div>
           <div class="col-lg-6" data-aos="fade-left">
             <div class="content pt-4 pt-lg-0 pl-0 pl-lg-3 ">
-              <h3>Compromiso por el servicio.</h3>
+              <h3>Compromiso con el cliente.</h3>
               <p class="font-italic">
                 La confianza en un Técnico o consultor informático es importante.
               </p>
@@ -133,7 +133,7 @@
 
         <div class="section-title" data-aos="fade-up">
           <h2>Servicios que ofrecemos</h2>
-          <p>Presupuestos sin cargo. Despeja todas tus dudas. </p>
+          <p>Despeja todas tus dudas. </p>
         </div>
 
         <div class="row">
@@ -150,7 +150,7 @@
             </div>
             <div class="icon-box mt-5" data-aos="fade-up" data-aos-delay="200">
               <i class="bx bx-cart"></i>
-              <h4>Venta de Equipos completos y Componentes.</h4>
+              <h4>Venta de insumos.</h4>
               <p>Asesoramiento para cambio de Hardware. Equipos completos o componentes (Placas de video, Fuentes, Mothers, cpu, Memorias, discos etc.) además de periféricos como webcams, teclados, mouse, monitores etc. </p>
             </div>
             <div class="icon-box mt-5" data-aos="fade-up" data-aos-delay="300">
@@ -217,7 +217,7 @@
               <li class="nav-item mt-2">
                 <a class="nav-link" data-toggle="tab" href="#tab-4">
                   <h4>Ponele RGB a tu vida</h4>
-                  <p>Desde tira de leds para tu escritorio hasta componentes para que tengas un toque de distinción  al area de trabajo.</p>
+                  <p>Desde tira de leds para tu escritorio, hasta componentes para que tengas un toque de distinción para mejorar tu setup.</p>
                 </a>
               </li>
             </ul>
@@ -290,7 +290,7 @@
       <div class="container">
 
         <div class="section-title" data-aos="fade-up">
-          <h2>Venta y Trabajos realizados</h2>
+          <h2>Trabajos realizados</h2>
           <p>Trabajos realizados y articulos para que te inspiren a mejorar tu setup.</p>
         </div>
 
@@ -825,7 +825,7 @@
           <div class="col-lg-6">
             <a href="#header" class="scrollto footer-logo"><img src="assets/img/hero-logo.png" alt=""></a>
             <h3>Bits & Bytes</h3>
-            <p>Suscribite si queres recivir informacion actualizada de los nuevos productos y nuestras promociones.</p>
+            <p></p>
           </div>
         </div>
 
