--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           <li class="active"><a href="index.html">Inicio</a></li>
           <li class="drop-down"><a href="">Nosotros</a>
             <ul>
-              <li><a href="#about">Sobre mí</a></li>
+              <li><a href="#about">Compromiso con el cliente</a></li>
               <!--<li><a href="#team">Trabajos a pedido</a></li>-->
 
               <li class="drop-down" style="display: none;"><a href="#">Deep Drop</a>
@@ -754,11 +754,11 @@
 
           <div class="col-lg-4">
             <div class="info d-flex flex-column justify-content-center" data-aos="fade-right">
-              <div class="address">
+            <!--  <div class="address">
                 <i class="icofont-google-map"></i>
                 <h4>Location:</h4>
                 <p>A108 Adam Street,<br>New York, NY 535022</p>
-              </div>
+              </div> -->
 
               <div class="email">
                 <i class="icofont-envelope"></i>
@@ -850,7 +850,7 @@
 
     <div class="container footer-bottom clearfix">
       <div class="copyright">
-        &copy; Copyright <strong><span>Bit & Bytes</span></strong>. All Rights Reserved 2021
+        &copy; Copyright <strong><span>Bit & Bytes</span></strong>. All Rights Reserved 2023
       </div>
       <div class="credits" style="color:#000;">
         <!-- All the links in the footer should remain intact. -->
