--- a/index.html
+++ b/index.html
@@ -747,7 +747,7 @@
 
         <div class="section-title">
           <h2>Contacto</h2>
-          <p>Escribenos para despejar tus dudas te contestaremos a la brevedad.</p>
+          <p>Escribinos para despejar dudas, te contestaremos a la brevedad.</p>
         </div>
 
         <div class="row">
@@ -763,14 +763,14 @@
               <div class="email">
                 <i class="icofont-envelope"></i>
                 <h4>Email:</h4>
-                <p>info@example.com</p>
+                <p><a href="mailto:bitsandbytestecnologia@gmail.com?Subject=Consulta">bitsandbytestecnologia@gmail.com</a></p>
               </div>
 
-              <div class="phone">
+              <!-- <div class="phone">
                 <i class="icofont-phone"></i>
                 <h4>Call:</h4>
                 <p>+1 5589 55488 55s</p>
-              </div>
+              </div> -->
 
             </div>
 
