--- a/index.html
+++ b/index.html
@@ -776,7 +776,7 @@
 
           </div>
 
-          <div class="col-lg-8 mt-5 mt-lg-0">
+          <div class="col-lg-8 mt-5 mt-lg-0" style="display: none;">
 
             <form action="forms/contact.php" method="post" role="form" class="php-email-form" data-aos="fade-left">
               <div class="form-row">
